added contact page and corrected errors

--- a/index.html
+++ b/index.html
@@ -4,14 +4,32 @@
     <meta charset="UTF-8">
     <title>Happy Paws Pet Adoption</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+
+        nav {
+            margin-bottom: 20px;
+        }
+
         nav a {
             text-decoration: none;
-            padding: 10px;
-            color: blue;
+            padding: 8px 15px;
+            background-color: #eee;
+            color: #333;
+            border-radius: 5px;
+            margin-right: 5px;
             font-weight: bold;
         }
+
         nav a:hover {
-            color: darkblue;
+            background-color: #ccc;
+        }
+
+        img {
+            margin: 10px 0;
         }
     </style>
 </head>
@@ -19,8 +37,9 @@
 
     <!-- Navigation Menu -->
     <nav>
-        <a href="index.html">Home</a> |
+        <a href="index.html">Home</a>
         <a href="pets.html">Available Pets</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <h1>Happy Paws Pet Adoption</h1>
