we added the style.css file and styled heading, forms, and other things

--- a/index.html
+++ b/index.html
@@ -3,35 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Happy Paws Pet Adoption</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-        }
-
-        nav {
-            margin-bottom: 20px;
-        }
-
-        nav a {
-            text-decoration: none;
-            padding: 8px 15px;
-            background-color: #eee;
-            color: #333;
-            border-radius: 5px;
-            margin-right: 5px;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            background-color: #ccc;
-        }
-
-        img {
-            margin: 10px 0;
-        }
-    </style>
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
