--- a/contact.html
+++ b/contact.html
@@ -3,51 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us - Happy Paws</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-        }
-
-        nav {
-            margin-bottom: 20px;
-        }
-
-        nav a {
-            text-decoration: none;
-            padding: 8px 15px;
-            background-color: #eee;
-            color: #333;
-            border-radius: 5px;
-            margin-right: 5px;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            background-color: #ccc;
-        }
-
-        input, textarea, button {
-            display: block;
-            margin: 10px 0 20px 0;
-            padding: 8px;
-            width: 300px;
-            font-size: 14px;
-        }
-
-        button {
-            width: 120px;
-            background-color: #333;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #555;
-        }
-    </style>
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
