--- a/pets.html
+++ b/pets.html
@@ -3,67 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Available Pets - Happy Paws</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 20px;
-        }
-
-        nav {
-            margin-bottom: 20px;
-        }
-
-        nav a {
-            text-decoration: none;
-            padding: 8px 15px;
-            background-color: #eee;
-            color: #333;
-            border-radius: 5px;
-            margin-right: 5px;
-            font-weight: bold;
-        }
-
-        nav a:hover {
-            background-color: #ccc;
-        }
-
-        img {
-            margin: 10px;
-        }
-
-        table {
-            border-collapse: collapse;
-            margin-top: 20px;
-            width: 80%;
-        }
-
-        th, td {
-            border: 1px solid #333;
-            padding: 8px;
-            text-align: center;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        caption {
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        figure {
-            display: inline-block;
-            margin: 10px;
-            text-align: center;
-        }
-
-        figcaption {
-            font-style: italic;
-            margin-top: 5px;
-        }
-    </style>
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
